# safe-transmute-rs

./: .travis.yml  Cargo.toml  README.md  aliases.js  appveyor.yml  crates.js  gh_rsa.enc  safe-transmute-rs.sublime-project  search-index.js  settings.html  source-files.js
implementors/safe_transmute/: trait.PodTransmutable.js
safe_transmute/: GuardError.t.html  PodTransmutable.t.html  all.html  enum.Error.html  enum.ErrorReason.html  fn.guarded_transmute.html  fn.guarded_transmute_bool_pedantic.html  fn.guarded_transmute_bool_permissive.html  fn.guarded_transmute_bool_vec_pedantic.html  fn.guarded_transmute_bool_vec_permissive.html  fn.guarded_transmute_many.html  fn.guarded_transmute_many_pedantic.html  fn.guarded_transmute_many_permissive.html  fn.guarded_transmute_pedantic.html  fn.guarded_transmute_pod.html  fn.guarded_transmute_pod_many.html  fn.guarded_transmute_pod_many_pedantic.html  fn.guarded_transmute_pod_many_permissive.html  fn.guarded_transmute_pod_pedantic.html  fn.guarded_transmute_pod_vec.html  fn.guarded_transmute_pod_vec_pedantic.html  fn.guarded_transmute_pod_vec_permissive.html  fn.guarded_transmute_to_bytes.html  fn.guarded_transmute_to_bytes_many.html  fn.guarded_transmute_to_bytes_pod.html  fn.guarded_transmute_to_bytes_pod_many.html  fn.guarded_transmute_to_bytes_pod_vec.html  fn.guarded_transmute_to_bytes_vec.html  fn.guarded_transmute_vec.html  fn.guarded_transmute_vec_pedantic.html  fn.guarded_transmute_vec_permissive.html  fn.safe_transmute_many.html  fn.safe_transmute_many_pedantic.html  fn.safe_transmute_many_permissive.html  fn.safe_transmute_one.html  fn.safe_transmute_one_pedantic.html  fn.safe_transmute_vec.html  fn.safe_transmute_vec_pedantic.html  fn.safe_transmute_vec_permissive.html  fn.transmute_many.html  (+46 more)
safe_transmute/align/: fn.check_alignment.html  fn.check_alignment_mut.html  index.html  sidebar-items.js
safe_transmute/base/: fn.from_bytes.html  fn.from_bytes_pedantic.html  fn.guarded_transmute_many.html  fn.guarded_transmute_many_permissive.html  fn.guarded_transmute_vec.html  (+11 more)
src/: align.rs  base.rs  bool.rs  error.rs  full.rs  guard.rs  lib.rs  pod.rs  to_bytes.rs  trivial.rs  util.rs
tests/: alignment_check.rs  lib.rs
(+268 files in other folders)
