[package]
name = "safe-transmute"
description = "A safeguarded transmute() for Rust"
documentation = "https://cdn.rawgit.com/nabijaczleweli/safe-transmute-rs/doc/safe_transmute/index.html"
repository = "https://github.com/nabijaczleweli/safe-transmute-rs"
readme = "README.md"
keywords = ["safe", "transmute", "checked"]
categories = ["rust-patterns", "memory-management", "no-std"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.9.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>",
           "Eduardo Pinho <enet4mikeenet@gmail.com>"]
exclude = ["*.enc"]

[features]
default = ["std"]
"std" = []
"test-unaligned" = []
