[package]
name = "safe-transmute"
description = "A safeguarded transmute() for Rust"
documentation = "https://rawcdn.githack.com/nabijaczleweli/safe-transmute-rs/doc/safe_transmute/index.html"
repository = "https://github.com/nabijaczleweli/safe-transmute-rs"
readme = "README.md"
keywords = ["safe", "transmute", "checked"]
categories = ["rust-patterns", "memory-management", "no-std"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.11.1"
authors = ["наб <nabijaczleweli@gmail.com>",
           "Eduardo Pinho <enet4mikeenet@gmail.com>",
           "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>",
           "Philipp Tessenow <philipp@tessenow.org>"]
exclude = ["*.enc"]

[features]
default = ["std"]
"std" = ["alloc"]
"alloc" = []
# Use const-generics for array trait implementations,
# available in Rust 1.51 and above:
# https://blog.rust-lang.org/2021/02/26/const-generics-mvp-beta.html
const_generics = []